1.增加图标文件和应用名称 2.调整数据单位

--- a/mainwindow.qrc
+++ b/mainwindow.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>src/image/func_off.png</file>
         <file>src/image/func_on.png</file>
+        <file>src/image/logo.ico</file>
     </qresource>
 </RCC>
